--- a/src/scss/layout/sections.scss
+++ b/src/scss/layout/sections.scss
@@ -27,7 +27,7 @@ $section-spacing: $spacing * 2; // visual gap between sections
 
 section,
 footer {
-  padding: $section-spacing / 2 0;
+  padding: math.div($section-spacing, 2) 0;
 }
 
 .col-12,
@@ -42,8 +42,8 @@ footer {
 .col-3,
 .col-2,
 .col-1 {
-  padding-bottom: $section-spacing / 2;
-  padding-top: $section-spacing / 2;
+  padding-bottom: math.div($section-spacing, 2);
+  padding-top: math.div($section-spacing, 2);
 
   *:first-child {
     margin-top: 0;    // do not apply top spacing to first element in a cel
